# moneylover-cli

./: Cargo.toml
src/: main.rs
src/commands/: category.rs  import.rs  login.rs  mod.rs  sync.rs  transaction.rs  wallet.rs
