[package]
name = "moneylover-cli"
version = "0.1.0"
author = ["Du Gia Huy <dugiahuy@gmail.com>"]
edition = "2021"
rust-version = "1.71.1"
description = "CLI Tool for [Money Lover](https://moneylover.me/) built with Rust"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
